--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = duperemove
-url = https://github.com/markfasheh/duperemove/archive/v0.11.1.tar.gz
+url = https://github.com/markfasheh/duperemove/archive/v0.11.2/duperemove-0.11.2.tar.gz
 archives = 
 giturl = https://github.com/markfasheh/duperemove.git
 domain = 
